--- a/css/style.css
+++ b/css/style.css
@@ -12,34 +12,16 @@
     background-color: #dde1e2; 
     width: 100%;
 
-
-    overscroll-behavior-y: contain;
+    /* Apariencia en IOS */
     -webkit-user-select: none;
     -webkit-tap-highlight-color: transparent;
     -webkit-touch-callout: none;
+
+    /* Android */
+    overscroll-behavior-y: contain;
 }
 
 /* Personalizados */
-/* Personalizados */
-button {
-  width: 80%;
-  border-radius: 5px;
-  border: none;
-  padding: 5px;
-  color: white;
-  font-size: 14px;
-}
-
-.btn-noti-activadas {
-  background-color: #3498db;
-}
-
-.btn-noti-desactivadas {
-  background-color: red;
-}
-
-
-
 .oculto {
   display: none !important;
 }
